# reqwise-api

./: .env.example  .gitignore  LICENSE  README.md  generate_openapi_yaml.py  openapi.yaml  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: projects.py  requirements.py  users.py
tests/: confest.py
tests/unit_tests/: test_customer_access.py  test_owner_access.py  test_user.py
